Updated the csv loader to make the uploading of data more transparent. And We have used a FastAPI service for the recommendation of the Books in for a specific book